[BUGFIX]  Fix typos. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/32
[BUGFIX]  Display hours in status widget correctly. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/38
[BUGFIX]  Avoid PHP8 errors in backend module. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/39
[TASK]    Remove PHP 8.1 deprecations. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/31
[TASK]    Allow plugins in composer 2.2. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/29
[TASK]    Make dashboard optional. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/30
[TASK]    Use .Build folder for dependencies. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/33
[TASK]    Register icons via service container. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/34
[TASK]    Move extension icon into Resources/Public/Icons folder. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/35
[TASK]    Avoid PHP 8.1 deprecations when indexing. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/37
[TASK]    Check if content element with search configuration is accessible
[DOC]     Add missing documentation for hooks for indexers. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/36
[TASK]    Remove usage of deprecated strftime() function and use localized date format in the backend controller.

Version 4.2.0, December 2021
[!!!]     This version has a new requirement (EXT:dashboard).
[FEATURE] Add cachable searchbox. Thanks to Stephan Bauer. https://github.com/teaminmedias-pluswerk/ke_search/pull/430
[BUGFIX]  Do not create preview images for files attached in the workspace version of a record. Thanks to medarob. https://github.com/teaminmedias-pluswerk/ke_search/issues/434
[BUGFIX]  Fix toggling of indexed content in the backend module for TYPO3 11 by using Bootstrap 5 data attributes.